--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+# 基本信息
 title: Your awesome title
 email: leizicung@163.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -26,8 +27,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/Jekyll" # the subpath of your site, e.g. /blog
 url: "https://fo-mal-haut.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+# Social usernames
+twitter_username: Lawrence Lee
+github_username:  Fo-mal-haut
+
+# 时间信息
+date_format: "%Y-%m-%d"  # 日期格式
+timezone: Asia/Shanghai   # 时区
 
 # Build settings
 theme: minima
